--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "skinny-salmon-cookies",
   "version": "1.0.0",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public",
+    "dev": "routify -c my-server",
+    "build": "routify -b && rollup -c",
+    "my-server": "rollup -c -w",
+    "start": "sirv public --single",
     "lint": "eslint -c .eslintrc --ext .svelte,.js src",
     "format": "eslint -c .eslintrc --fix --ext .svelte,.js --fix src",
     "format:prettier": "prettier --write src/**/{*.svelte,*.js}"
@@ -12,6 +13,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "@roxi/routify": "^2.12.0",
     "eslint": "^7.19.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^6.0.0",
